// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Footer Render Footer with active link 1`] = `
<footer>
  <a
    className="logo__link logo__link--light"
    href="/"
    onClick={[Function]}
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
  <div
    className="copyright"
  >
    <p>
      © 2019 What to watch Ltd.
    </p>
  </div>
</footer>
`;

exports[`Render Footer Render Footer without active link 1`] = `
<footer>
  <div
    className="logo__link logo__link--light"
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </div>
  <div
    className="copyright"
  >
    <p>
      © 2019 What to watch Ltd.
    </p>
  </div>
</footer>
`;
